--- a/myportfolio/package.json
+++ b/myportfolio/package.json
@@ -14,8 +14,10 @@
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
+    "react-dnd": "^16.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-intersection-observer": "^9.5.2",
     "tailwindcss": "3.3.3"
   }
 }
